<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>demo</groupId>
  <artifactId>demo</artifactId>
  <packaging>war</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>demo Maven Webapp</name>
  

  <properties>
		<gwt.version>2.7.0</gwt.version>
		<mgwt.version>2.0.0</mgwt.version>
		<gwtphonegap.version>3.5.0.1</gwtphonegap.version>
		<gwt.plugin.version>2.7.0</gwt.plugin.version>
		<gwt.style>DETAILED</gwt.style>
		<resty_gwt.version>2.0</resty_gwt.version>
		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt</artifactId>
				<version>${gwt.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.googlecode.mgwt</groupId>
				<artifactId>mgwt</artifactId>
				<version>${mgwt.version}</version>
			</dependency>
			<dependency>
				<groupId>com.googlecode.gwtphonegap</groupId>
				<artifactId>gwtphonegap</artifactId>
				<version>${gwtphonegap.version}</version>
			</dependency>
		</dependencies>

	</dependencyManagement>

	<dependencies>
		<!-- GWT -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-codeserver</artifactId>
		</dependency>
		<dependency>
			<groupId>com.googlecode.mgwt</groupId>
			<artifactId>mgwt</artifactId>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwtphonegap</groupId>
			<artifactId>gwtphonegap</artifactId>
		</dependency>

		<!-- RestyGwt -->
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.0-m10</version>
		</dependency>
		<dependency>
			<groupId>org.fusesource.restygwt</groupId>
			<artifactId>restygwt</artifactId>
			<version>${resty_gwt.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.javascript</groupId>
			<artifactId>closure-compiler</artifactId>
			<version>v20141120</version>
		</dependency>
		
		<dependency>
			<groupId>com.ahome-it</groupId>
 			<artifactId>ahome-gmaps</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>com.google.gwt.google-apis</groupId>
			<artifactId>gwt-ajaxloader</artifactId>
			<version>1.1.0</version>
		</dependency>
		
	</dependencies>

	<build>
		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.plugin.version}</version>
				<configuration>
					<strict>true</strict>
					<jsInteropMode>JS</jsInteropMode>
					<extraJvmArgs>-Xss1024K -Xmx1g -XX:MaxPermSize=256M</extraJvmArgs>
					<logLevel>INFO</logLevel>
					<style>${gwt.style}</style>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>bower-install</id>
						<phase>install</phase>
						<configuration>
							<target>
								<ant antfile="build.xml" target="bower" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>copy-artifacts</id>
						<configuration>
							<target>
								<ant antfile="build.xml" target="copy-cordova-artifacts" />
							</target>
						</configuration>
						<phase>install</phase>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>